k8s/service-mysql-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: dev
spec:
  type: ExternalName
  externalName: my-db.cwxcqgymyjfp.us-east-1.rds.amazonaws.com
